--- a/composer.json
+++ b/composer.json
@@ -9,44 +9,21 @@
     },
     "require":           {
         "php":                                  "^5.6|^7.0",
-        "symfony/symfony":                      "^2.8",
-        "doctrine/orm":                         "^2.4",
+        "aequasi/environment":                  "^2.0",
         "doctrine/doctrine-bundle":             "^1.4",
-        "symfony/monolog-bundle":               "^2.4",
-        "sensio/distribution-bundle":           "^5.0",
+        "doctrine/orm":                         "^2.4",
         "incenteev/composer-parameter-handler": "^2.0",
-        "team-reflex/discord-php":              "dev-bot-api",
-        "aequasi/environment":                  "^2.0"
+        "regex-guard/regex-guard":              "^1.1",
+        "sensio/distribution-bundle":           "^5.0",
+        "symfony/monolog-bundle":               "^2.4|^3.0",
+        "symfony/symfony":                      "^2.8|^3.0",
+        "symfony/var-dumper":                   "^2.8|^3.0",
+        "team-reflex/discord-php":              "dev-bot-api"
     },
     "require-dev":       {
-        "sensio/generator-bundle": "~3.0",
-        "symfony/phpunit-bridge":  "~2.7"
+        "sensio/generator-bundle": "^3.0",
+        "symfony/phpunit-bridge":  "^2.8|^3.0"
     },
     "minimum-stability": "dev",
-    "scripts":           {
-        "post-install-cmd": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
-        ],
-        "post-update-cmd":  [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
-        ]
-    },
-    "config":            {
-        "bin-dir":  "bin",
-        "platform": {
-            "php": "5.6"
-        }
-    },
-    "extra":             {
-        "symfony-app-dir":      "app",
-        "incenteev-parameters": {
-            "file": "app/config/parameters.yml"
-        }
-    }
+    "prefer-stable":     true
 }
