--- a/src/AppBundle/Resources/config/doctrine/Ignored.mongodb.yml
+++ b/src/AppBundle/Resources/config/doctrine/Ignored.mongodb.yml
@@ -4,9 +4,9 @@ Discord\Base\AppBundle\Model\Ignored:
     discriminatorField: type
     discriminatorMap:
         ignored: Discord\Base\AppBundle\Model\Ignored
-        channel: Discord\Base\AppBundle\Model\Ignored\IgnoredChannel
-        server:  Discord\Base\AppBundle\Model\Ignored\IgnoredServer
-        user:    Discord\Base\AppBundle\Model\Ignored\IgnoredUser
+        channel: Discord\Base\AppBundle\Model\IgnoredChannel
+        server:  Discord\Base\AppBundle\Model\IgnoredServer
+        user:    Discord\Base\AppBundle\Model\IgnoredUser
     collection: ignored
     indexes:
         type_identifier_index:
