--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     },
     "require":           {
-        "php":                                  "^5.6|^7.0",
+        "php":                                  "^7.0",
         "aequasi/environment":                  "^2.0",
         "doctrine/doctrine-bundle":             "^1.4",
         "incenteev/composer-parameter-handler": "^2.0",
@@ -16,10 +16,16 @@
         "sensio/distribution-bundle":           "^5.0",
         "symfony/monolog-bundle":               "^2.4|^3.0",
         "symfony/symfony":                      "^2.8|^3.0",
-        "team-reflex/discord-php":              "dev-develop@dev",
-        "ad7six/dsn":                           "^0.4.0",
-        "cache/adapter-bundle":                 "^0.3.3"
+        "team-reflex/discord-php":              "dev-master@dev",
+        "ad7six/dsn":                           "^0.4",
+        "cache/adapter-bundle":                 "^0.3"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url":  "git@github.com:uniquoooo/DiscordPHP-Rewrite.git"
+        }
+    ],
     "suggest":           {
         "doctrine/orm":                "^2.4",
         "doctrine/mongodb-odm":        "^1.0",
